@@ -4,7 +4,9 @@ Changelog
 1.17 - Unreleased
 -----------------
 
-
+* Add support for branches in Mercurial. You can specify a branch name after a dash
+  in the repository URL. Changing a branch name in the URL afterwards branch will
+  just do a switch.
 
 1.16 - 2010-09-16
 -----------------
